update header and gallery page

--- a/css/blog.css
+++ b/css/blog.css
@@ -268,9 +268,11 @@
       width: auto;
       border-radius: 50%;
       padding: 15px 0; }
-  .main__blog-comments img {
-    width: auto;
-    border-radius: 50%; }
+  .main__blog-comments {
+    padding-bottom: 50px; }
+    .main__blog-comments img {
+      width: auto;
+      border-radius: 50%; }
   .main__detail-title {
     display: -webkit-box;
     display: -moz-box;
@@ -290,5 +292,65 @@
     transition: 0.3s ease-in-out; }
     .main__detail-reply:hover {
       color: #c59d5f; }
+  .main__detail-comments {
+    display: none;
+    padding: 20px 0; }
+    .main__detail-comments label {
+      padding: 10px 0;
+      cursor: pointer; }
+    .main__detail-comments button {
+      font-size: 15px;
+      background-color: #ffb400;
+      color: #fff;
+      padding: 10px 25px;
+      -webkit-transition: 0.3s ease-in-out;
+      -moz-transition: 0.3s ease-in-out;
+      transition: 0.3s ease-in-out;
+      border: none; }
+      .main__detail-comments button:hover {
+        background-color: #c59d5f;
+        color: #fff; }
+  .main__detail-commentsFor {
+    padding-bottom: 15px; }
+    .main__detail-commentsFor p {
+      font-size: 16px;
+      font-weight: 600;
+      color: #000; }
+    .main__detail-commentsFor span {
+      font-size: 15px;
+      color: #ffb400;
+      font-style: italic;
+      cursor: pointer;
+      -webkit-transition: 0.3s ease-in-out;
+      -moz-transition: 0.3s ease-in-out;
+      transition: 0.3s ease-in-out; }
+      .main__detail-commentsFor span:hover {
+        color: #c59d5f; }
+  .main__detail-commentsInput textarea {
+    width: 100%;
+    height: 150px;
+    text-indent: 10px;
+    color: #999;
+    border: 1px solid #d0d0d0; }
+  .main__detail-commentsAuthor {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    justify-content: space-between; }
+  .main__detail-commentsList {
+    width: 49%; }
+    .main__detail-commentsList input {
+      width: 100%;
+      height: 46px;
+      color: #999;
+      text-indent: 10px;
+      border: 1px solid #d0d0d0; }
+  .main__comments-line {
+    background-color: #d0d0d0;
+    height: 1px;
+    width: 100%;
+    margin: 20px 0; }
 
 /*# sourceMappingURL=blog.css.map */
