--- a/css/style.scss
+++ b/css/style.scss
@@ -103,7 +103,7 @@ label {
     width: 405px;
     height: 100%;
     min-height: 100%;
-    padding: 66px 65px 36px;
+    padding: 66px 55px 36px;
     background-color: #0a090a;
     text-align: left;
     overflow: hidden;
@@ -205,7 +205,7 @@ label {
   text-align: center;
   width: 100px;
   a {
-    color: #999;
+    color: #fff;
     padding: 0px 12px 0px 12px;
     line-height: 50px;
     display: block;
@@ -580,6 +580,11 @@ label {
 
 // for introduce your style
 .introduce {
+  animation: aniName 1s;
+  -moz-animation: aniName 1s;
+  -webkit-animation: aniName 1s;
+  -o-animation: aniName 1s;
+  position: relative;
   padding: 50px 0;
   &__title {
     h3 {
@@ -656,6 +661,13 @@ label {
 }
 
 // for home icons group
+.home-icons-group {
+  animation: aniName 1s;
+  -moz-animation: aniName 1s;
+  -webkit-animation: aniName 1s;
+  -o-animation: aniName 1s;
+  position: relative;
+}
 .home__icon {
   text-align: center;
   padding: 30px 15px;
