--- a/css/responsive.css
+++ b/css/responsive.css
@@ -91,7 +91,13 @@
     float: left; } }
 @media (max-width: 575px) {
   .company {
-    padding-bottom: 15px; } }
+    padding-bottom: 15px; }
+
+  .grid-item {
+    width: 50%; }
+
+  .grid-item-2 {
+    width: 100%; } }
 @media (max-width: 767px) {
   .cake__position img {
     width: 100%; } }
