--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -143,6 +143,12 @@
   .company {
     padding-bottom: 15px;
   }
+  .grid-item {
+    width: 50%;
+  }
+  .grid-item-2 {
+    width: 100%;
+  }
 }
 
 @media (max-width: 767px) {
