--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,17 @@ img {
 p {
   margin-bottom: 0; }
 
+select {
+  /*for firefox*/
+  -moz-appearance: none;
+  /*for chrome*/
+  -webkit-appearance: none;
+  appearance: none; }
+
+/*for IE10+*/
+select::-ms-expand {
+  display: none; }
+
 input:focus,
 button:focus,
 textarea:focus,
@@ -594,6 +605,11 @@ label {
   height: 1px;
   margin: 2px 0 0;
   background-color: #1e1e1e; }
+
+.home-filter__item svg {
+  position: absolute;
+  top: 35px;
+  right: 15px; }
 
 .home-filter-inner {
   padding: 30px;
